<resources>
    <string name="app_name">TBR Status</string>
    <string name="hello_world">TBR Services Status</string>
    <string name="page1">Main page</string>
    <string name="team">Team BlueRidge</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="app_info">You can get the status of our services from this app. Make sure you have an active internet connection to retrieve data.</string>
    <string name="select_option">Select an option from the drawer to begin</string>

    <string name="nav_item_general">Status</string>

    <string name="main_site">Main Site</string>
    <string name="stikked">Stikked (Paste)</string>
    <string name="wiki">Wiki</string>
    <string name="gerrit">Gerrit</string>
    <string name="projects">Projects</string>
    <string name="jenkins">Jenkins</string>
    <string name="file_server">File Server</string>
    <string name="buildbox">Buildbox</string>

    <string name="help">Help</string>

    <string name="about">About</string>
    <string name="version">TBR Status v1.0</string>
    <string name="created">Created by Team BlueRidge</string>

    <string name="servicedown">Does a service seem to be down? </string>
    <string name="mailus">Let us know via email</string>

    <string-array name="spinner_items">
        <item>@string/page1</item>
        <item>@string/nav_item_general</item>
        <item>@string/help</item>
    </string-array>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_general</item>
        <item>@string/help</item>
    </string-array>

    <string-array name="nav_drawer_values">
        <item>0</item>
        <item>1</item>
    </string-array>

</resources>
